<resources>
    <array name="regions">Midwest, Eastern Seaboard, Southeast</array>
    <array name="seasons">Early Spring, Mid-to-Late Spring, Summer, Fall, Winter</array>
    <array name="areas">Full Sun, Near Water, Partial Shade</array>
    <!-- TODO: Remove or change this placeholder text -->
    <array name="parts">Greens, Shoots/Stalks, Underground Vegetable, Fruit/Berry, Seed/Grain,
        Flower
    </array>
    <string name="app_name">picked</string>
    <!-- Strings used for fragments for navigation -->
    <string name="log_button">log</string>
    <string name="search_button">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="other">other</string>
    <string name="submit">submit</string>

    <!--  Picked Database arrays  -->
    <string name="region_title">Regions</string>
    <string name="region_description">Please select the region closets to where you have found your plant</string>
    <string name="Midwest">midwest</string>
    <string name="Eastern_Seaboard">eastern seaboard</string>
    <string name="Southeast">southeast</string>

    <string name="season_title">Seasons</string>
    <string name="season_description">Please select the season that you are currently in</string>
    <string name="Early_Spring">early spring</string>
    <string name="Mid_to_Late_Spring">mid-to-late spring</string>
    <string name="Summer">summer</string>
    <string name="Fall">fall</string>
    <string name="Winter">winter</string>

    <string name="area_title">Areas</string>
    <string name="area_description">Please select the predominant lighting/wetland environment you found the plant in</string>
    <string name="Partial_Shade">partial shade</string>
    <string name="Full_Sun">full sun</string>
    <string name="Near_Water">near water</string>

    <string name="part_title">Plant Parts</string>
    <string name="part_description">What part of the plant are you logging?</string>
    <string name="Greens">green</string>
    <string name="Shoots">shoot</string>
    <string name="Underground">underground</string>
    <string name="Fruits">fruit</string>
    <string name="Seeds">seed</string>
    <string name="Flower">flower</string>

    <string name="part_search_description">What type of plant are you looking for?</string>
    <string name="no_connection_warning">ERROR: No internet connection detected! Please check your connection and try again.</string>
    <string name="wrong_location_format">ERROR: Please follow the given format "City, State"!</string>

    <!--  saved  -->
    <string name="selected_region"> </string>
    <string name="selected_area"> </string>
    <string name="selected_season"> </string>
    <string name="selected_part"> </string>
    <string name="selected_plant"> </string>
    <string name="found_location"> </string>
    <string name="last_post"> </string>
    <string name="title_activity_edit_posts">EditPostsActivity</string>
    <string name="searched_name"> </string>
    <string name="searched_on"> </string>
    <string name="location_search_current" > </string>
    <string name="location_search_input" > </string>


    <!--    https://github.com/android/permissions-samples/blob/main/RuntimePermissionsBasic/Application/src/main/res/values/strings.xml -->
    <string name="location_unavailable"><b>Location could not be accessed.</b>\nThis occurs when the location is not available (for example it is already in use) or if the system has denied access (for example when location access has been disabled).</string>
    <string name="location_access_required">Location access is required to get location.</string>
    <string name="ok">OK</string>
    <string name="location_permission_not_available">Permission is not available. Requesting location permission.</string>
    <string name="location_permission_available">Permission is available. Starting preview.</string>
    <string name="location_permission_granted">Permission was granted. Starting preview.</string>
    <string name="location_permission_denied">Permission request was denied.</string>

</resources>