<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SeasonFragment">

    <TextView
        android:id="@+id/PlantPart"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/part_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/part_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlantPart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/generic_button2"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/Greens"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/ShootButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ShootButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/Shoots"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/FruitButton"
        app:layout_constraintStart_toEndOf="@id/GreenButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/UndergroundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/Underground"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShootButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FruitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Fruits"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintStart_toEndOf="@id/ShootButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SeedsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Seeds"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/FlowerButton"
        app:layout_constraintTop_toBottomOf="@+id/UndergroundButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FlowerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Flower"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toStartOf="@id/SeedsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UndergroundButton" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/OtherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:text="@string/other"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FlowerButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button3"
        android:text="@string/submit"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OtherButton" />


</androidx.constraintlayout.widget.ConstraintLayout>