<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SeasonFragment">

    <TextView
        android:id="@+id/Season"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/season_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/season_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Season" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/EarlySpringButton"
        android:layout_width="350dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/generic_button2"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/Early_Spring"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/MidtoLateSpringButton"
        android:layout_width="350dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@drawable/generic_button2"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/Mid_to_Late_Spring"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EarlySpringButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SummerButton"
        android:layout_width="350dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@drawable/generic_button2"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/Summer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MidtoLateSpringButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FallButton"
        android:layout_width="350dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@drawable/generic_button2"
        android:text="@string/Fall"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SummerButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/WinterButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Winter"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FallButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="invisible"
        android:id="@+id/SubmitButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_button3"
        android:text="@string/submit"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WinterButton" />


</androidx.constraintlayout.widget.ConstraintLayout>