<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".RegionsFragment">

    <TextView
        android:id="@+id/Region"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/region_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/region_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Region" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/MidwestButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Midwest"
        android:textSize="40sp"
        android:fontFamily="@font/quicksand_semibold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SouthEastButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Southeast"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MidwestButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SeaboardButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/generic_button2"
        android:text="@string/Eastern_Seaboard"
        android:textSize="40sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SouthEastButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="invisible"
        android:id="@+id/SubmitButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/generic_button3"
        android:text="@string/submit"
        android:textSize="40sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SeaboardButton" />


</androidx.constraintlayout.widget.ConstraintLayout>